panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__pointers__test_addressof_derefd_pointer_to_incomplete_type.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/pointers/test_addressof_derefd_pointer_to_incomplete_type.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/pointers/test_addressof_derefd_pointer_to_incomplete_type.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration p~3 `ptr<struct T~2>` nullptr)
         (declaration q~4 `ptr<struct T~2>` (addressof (deref (name p~3 `ptr<struct T~2>`))))
         (return (equal (name p~3 `ptr<struct T~2>`) (name q~4 `ptr<struct T~2>`))))))

----- stderr -----
