panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__pointers__test_compound_literal_as_null_pointer_constant.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/pointers/test_compound_literal_as_null_pointer_constant.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/pointers/test_compound_literal_as_null_pointer_constant.c"
   (declaration p1~0 `ptr<int>` (compound-literal (declaration compound_literal.1~2 `int` (braced ∅))))
   (function-definition
      main~3 `fn() -> int`
      (compound-statement
         (hoisted-compound-literal compound_literal.1~2 `int`)
         (hoisted-compound-literal compound_literal.6~7 `int`)
         (declaration p2~5 `ptr<int>` (compound-literal (declaration compound_literal.6~7 `int` (braced ∅))))
         (return
            (logical-and
               (equal (name p1~0 `ptr<int>`) nullptr)
               (equal (name p2~5 `ptr<int>`) nullptr))))))

----- stderr -----
