panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__pointers__test_ptr_cmp_between_differently_qualified_pointers.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/pointers/test_ptr_cmp_between_differently_qualified_pointers.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/pointers/test_ptr_cmp_between_differently_qualified_pointers.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration x~2 `int` 42)
         (declaration p~3 `ptr<int>` (addressof (name x~2 `int`)))
         (declaration p2~4 `ptr<int const>` (addressof (name x~2 `int`)))
         (return (equal (name p~3 `ptr<int>`) (name p2~4 `ptr<int const>`))))))

----- stderr -----
